homework-final-project

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,10 @@
 body,
 html {
   height: 100%;
-  font-family: "Roboto",
-sans-serif;
-font-size: 16px;
-font-weight: 400;
-color: rgba(0, 0, 0, 0.8);
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 body {
@@ -59,6 +58,7 @@ svg {
   max-width: 1740px;
   height: 100%;
   padding: 0 1.7%;
+  position: relative;
   &--with-shadow {
     box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.2);
   }
