--- a/src/components/AuthForm.scss
+++ b/src/components/AuthForm.scss
@@ -15,7 +15,8 @@
   box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .authform__title {
@@ -26,22 +27,31 @@
   text-align: center;
   line-height: 1;
   margin-bottom: 30px;
+  flex-basis: 100%;
 }
 
 .authform__input {
   padding: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border: none;
   border-bottom: 1.5px solid #a5a5a5;
   transition-duration: 0.3s;
   transition-property: all;
   outline: none;
+  flex-basis: 100%;
   &:hover {
     border-bottom: 1.5px solid #313131;
   }
   &:focus {
     border-bottom: 1.5px solid #3f51b5;
   }
+}
+
+.authform__input-error {
+  font-weight: 400;
+  font-size: 14px;
+  color: red;
+  margin-bottom: 20px;
 }
 
 .authform__submit {
@@ -60,4 +70,11 @@
   &:hover {
     border: 1px solid rgba(63, 81, 181, 1);
   }
+}
+
+.authform__error {
+  align-self: flex-end;
+  margin: auto 0;
+  font-weight: 600;
+  color: red;
 }
